--- a/crasher.html
+++ b/crasher.html
@@ -47,7 +47,7 @@ function finish() {
 <h1>Browser Crasher</h1>
 <p>This page iterates over all test URLs given in testpages.js. The primary intention was to run crashing tests from browser test suites. Run getcrashers.sh with a path to a test suite to update.</p>
 
-Start with: <input id="startwith"> Delay: <span id="delay">500</span>ms <input id="delayslider" onchange="delaychange()" type="range" min="50" max="5000" value="500"> <button type="button" onclick="go()">Go!</button><br><br>
+Start with: <input id="startwith"> Delay: <tre56e4rtgyhujiklspan id="delay">500</span>ms <input id="delayslider" onchange="delaychange()" type="range" min="50" max="5000" value="500"> <button type="button" onclick="go()">Go!</button><br><br>
 
 Test <span id="current">-</span>/<span id="sumtests"></span><br><br>
 
